--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ header {
     flex-direction: row;
     padding: 10px 0px;
     box-sizing: border-box;
-    justify-content: center;
 }
 
 .priority-filter {
@@ -22,42 +21,32 @@ header {
     flex-direction: row;
     background-color: #3d3d3d;
     height: 60px;
-    width: 400px;
-    margin-left: 50px;
-    /*cursor: pointer;*/
-    justify-content: space-evenly;
-    align-items: center;
+    margin-left: 40px;
 }
 
 .priority-filter .box {
     height: 40px;
     width: 60px;
-    /*margin: 10px;*/
+    margin: 10px;
+    cursor: pointer;
     box-sizing: border-box;
 }
 
 .priority-filter .box:hover {
-    border: 2px solid white;
+    border: 2px solid #ffffff;
 }
 
 .priority-filter .box.p1 {
     background-color: pink;
-    cursor: pointer;
 }
-
 .priority-filter .box.p2 {
     background-color: seagreen;
-    cursor: pointer;
 }
-
 .priority-filter .box.p3 {
     background-color: cornflowerblue;
-    cursor: pointer;
 }
-
 .priority-filter .box.p4 {
     background-color: black;
-    cursor: pointer;
 }
 
 .quick-action {
@@ -69,11 +58,12 @@ header {
 }
 
 .quick-action .icon {
-    font-size: 40px;
-    padding: 0px 10px;
+    font-size: 30px;
+    padding: 5px;
+    cursor: pointer;
+    padding:0 10px;
     display: flex;
     align-items: center;
-    cursor: pointer;
 }
 
 .quick-action .icon.add {
@@ -84,24 +74,21 @@ header {
     color: red;
 }
 
-.quick-action .icon.add:hover {
-    background-color: yellowgreen;
+.quick-action .icon:hover {
+    background-color: greenyellow;
 }
 
-.quick-action .icon.delete:hover {
-    background-color: yellowgreen;
-}
-
-section h1 {
+main h1 {
     display: flex;
+    width: 100%;
     justify-content: center;
     padding: 10px 0px;
 }
 
 .modal {
-    width: 50vh;
+    width: 50vw;
     height: 50vh;
-    background-color: #dfe4da;
+    background-color: #dfe4ea;
     position: absolute;
     transform: translate(-50%, -50%);
     left: 50%;
@@ -109,7 +96,7 @@ section h1 {
     display: flex;
 }
 
-.modal .left-section {
+.modal .left-section { 
     width: calc(100% - 80px);
     display: flex;
     height: 100%;
@@ -124,34 +111,44 @@ section h1 {
 
 .modal .left-section textarea {
     width: 100%;
-    background: transparent;
+    background-color: transparent;
     padding: 10px;
 }
 
-.right-section .priority-filter{
+.modal .priority-filter {
     flex-direction: column;
     margin-left: 0px;
     height: 100%;
     width: 100%;
-}
-
-.modal .right-section
-{
-    position: relative;
-}
-
-.right-section .close
-{
-    position: absolute;
     box-sizing: border-box;
-    cursor: pointer;
-    right:-8px;
-    top: -12px;
-    font-size: 25px;
+}
+
+.modal .priority-filter .box.selected {
+    border: 1px solid #ffffff;
+}
+
+
+.modal .right-section {
+    position: relative;
+    padding-top: 10px;
+    box-sizing: border-box;
+}
+
+.modal .right-section .close {
+    position: absolute;
+    right: -10px;
+    top: -10px;
     color: red;
-    background-color: yellow;
+    font-size: 20px;
+    cursor: pointer;
+    background-color: rgba(180, 176, 176, 0.8);
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
+    padding: 5px;
+    width: 20px;
+    height: 20px;
     text-align: center;
+}
+
+.hide {
+    display: none;
 }
