--- a/style.css
+++ b/style.css
@@ -6,6 +6,13 @@
     font-family: 'Roboto', sans-serif;
 }
 
+:root {
+    --p1 : pink;
+    --p2 : seagreen;
+    --p3 : cornflowerblue;
+    --p4 : black;
+}
+
 header {
     background-color: #4b4b4b;
     height: 80px;
@@ -14,6 +21,7 @@ header {
     flex-direction: row;
     padding: 10px 0px;
     box-sizing: border-box;
+    justify-content: center;
 }
 
 .priority-filter {
@@ -21,32 +29,42 @@ header {
     flex-direction: row;
     background-color: #3d3d3d;
     height: 60px;
-    margin-left: 40px;
+    width: 400px;
+    margin-left: 50px;
+    /*cursor: pointer;*/
+    justify-content: space-evenly;
+    align-items: center;
 }
 
 .priority-filter .box {
     height: 40px;
     width: 60px;
-    margin: 10px;
-    cursor: pointer;
+    /*margin: 10px;*/
     box-sizing: border-box;
 }
 
 .priority-filter .box:hover {
-    border: 2px solid #ffffff;
+    border: 2px solid white;
 }
 
 .priority-filter .box.p1 {
     background-color: pink;
+    cursor: pointer;
 }
+
 .priority-filter .box.p2 {
     background-color: seagreen;
+    cursor: pointer;
 }
+
 .priority-filter .box.p3 {
     background-color: cornflowerblue;
+    cursor: pointer;
 }
+
 .priority-filter .box.p4 {
     background-color: black;
+    cursor: pointer;
 }
 
 .quick-action {
@@ -58,12 +76,11 @@ header {
 }
 
 .quick-action .icon {
-    font-size: 30px;
-    padding: 5px;
-    cursor: pointer;
-    padding:0 10px;
+    font-size: 40px;
+    padding: 0px 10px;
     display: flex;
     align-items: center;
+    cursor: pointer;
 }
 
 .quick-action .icon.add {
@@ -74,21 +91,24 @@ header {
     color: red;
 }
 
-.quick-action .icon:hover {
-    background-color: greenyellow;
+.quick-action .icon.add:hover {
+    background-color: yellowgreen;
 }
 
-main h1 {
+.quick-action .icon.delete:hover {
+    background-color: yellowgreen;
+}
+
+section h1 {
     display: flex;
-    width: 100%;
     justify-content: center;
     padding: 10px 0px;
 }
 
 .modal {
-    width: 50vw;
+    width: 50vh;
     height: 50vh;
-    background-color: #dfe4ea;
+    background-color: #dfe4da;
     position: absolute;
     transform: translate(-50%, -50%);
     left: 50%;
@@ -96,7 +116,7 @@ main h1 {
     display: flex;
 }
 
-.modal .left-section { 
+.modal .left-section {
     width: calc(100% - 80px);
     display: flex;
     height: 100%;
@@ -111,44 +131,110 @@ main h1 {
 
 .modal .left-section textarea {
     width: 100%;
-    background-color: transparent;
+    background: transparent;
     padding: 10px;
 }
 
-.modal .priority-filter {
+.right-section .priority-filter{
     flex-direction: column;
     margin-left: 0px;
     height: 100%;
     width: 100%;
-    box-sizing: border-box;
 }
 
-.modal .priority-filter .box.selected {
-    border: 1px solid #ffffff;
+.modal .priority-filter .box.selected{
+    border: 2px solid white;
 }
 
-
-.modal .right-section {
+.modal .right-section
+{
     position: relative;
-    padding-top: 10px;
-    box-sizing: border-box;
 }
 
-.modal .right-section .close {
+.right-section .close
+{
     position: absolute;
-    right: -10px;
-    top: -10px;
-    color: red;
-    font-size: 20px;
+    box-sizing: border-box;
     cursor: pointer;
-    background-color: rgba(180, 176, 176, 0.8);
+    right:-8px;
+    top: -12px;
+    font-size: 25px;
+    color: red;
+    background-color: yellow;
     border-radius: 50%;
-    padding: 5px;
-    width: 20px;
-    height: 20px;
+    width: 30px;
+    height: 30px;
     text-align: center;
 }
 
-.hide {
+.hide
+{
     display: none;
+}
+
+.ticket-section
+{
+    display: flex;
+    padding: 15px;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.ticket-container
+{
+   width: 200px;
+   min-height: 100px;
+   background-color: #ccc;
+}
+
+.ticket-container .ticket-priority
+{
+    display: flex;
+    height: 20px;
+}
+
+.ticket-container .ticket-id
+{
+  display: flex;
+  height: 30px;
+}
+
+.ticket-container .ticket-content
+{
+    display: flex;
+    height: 100px;
+}
+
+.ticket-container .ticket-priority.p1{
+    background-color: var(--p1);
+}
+
+.ticket-container .ticket-priority.p2{
+    background-color: var(--p2);
+}
+
+.ticket-container .ticket-priority.p3{
+    background-color: var(--p3);
+}
+
+.ticket-container .ticket-priority.p4{
+    background-color: var(--p4);
+}
+
+.ticket-container .ticket-id
+{
+    display: flex;
+    height: 30px;
+    background-color: yellow;
+}
+
+.ticket-container .ticket-content textarea
+{
+    display: flex;
+    width: 100%;
+    background-color: transparent;
+    resize: none;
+    outline: none;
+    border: none;
+    padding: 5px;
 }
